policies/pod-security/require-run-as-nonroot/resources.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsNonRoot: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: false
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      runAsNonRoot: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
  securityContext:
    runAsNonRoot: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      runAsNonRoot: false
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
  - name: container02
    image: dummyimagename
    securityContext:
      runAsNonRoot: false
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod11
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
  securityContext:
    runAsNonRoot: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod12
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod13
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod14
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod15
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsNonRoot: false
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod16
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    allowPrivilegeEscalation: false
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    runAsNonRoot: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
  namespace: mas-dev-core
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      runAsNonRoot: true
